--- a/demo/demo01/package.json
+++ b/demo/demo01/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "base",
+	"name": "demo01",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -10,17 +10,15 @@
 		"@types/node": "^16.18.68",
 		"@types/react": "^18.2.46",
 		"@types/react-dom": "^18.2.18",
-		"antd": "^5.12.5",
 		"qiankun": "^2.10.16",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.21.1",
 		"react-scripts": "5.0.1",
 		"typescript": "^4.9.5",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "craco start",
 		"build": "craco build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
