--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "base",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://github.com/resetsix/qiankun-demo",
+	"homepage": "https://github.com/qiankun-demo",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
