--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: install node modules
-        run: yarn # 使用yarn安装项目依赖
+        run: yarn install # 使用yarn安装项目依赖
 
       - name: build package
         run: yarn run build # 使用yarn构建项目
