--- a/main/.env
+++ b/main/.env
@@ -6,3 +6,6 @@ REACT_APP_MICRO_APP_FIRST=//localhost:4001
 
 # 微项目二主机地址
 REACT_APP_MICRO_APP_SECOND=//localhost:4002
+
+# 启动项目不默认打开浏览器
+BROWSER=none
