--- a/package.json
+++ b/package.json
@@ -1,51 +1,36 @@
 {
-	"name": "base",
-	"version": "0.1.0",
-	"private": true,
-	"homepage": "https://github.com/qiankun-demo",
-	"dependencies": {
-		"@testing-library/jest-dom": "^5.17.0",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
-		"@types/jest": "^27.5.2",
-		"@types/node": "^16.18.68",
-		"@types/react": "^18.2.46",
-		"@types/react-dom": "^18.2.18",
-		"antd": "^5.12.5",
-		"qiankun": "^2.10.16",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.21.1",
-		"react-scripts": "5.0.1",
-		"typescript": "^4.9.5",
-		"web-vitals": "^2.1.4"
-	},
-	"scripts": {
-		"start": "craco start",
-		"build": "craco build",
-		"test": "craco test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-		"@craco/craco": "^7.1.0"
-	}
+  "name": "qiankun-example",
+  "version": "0.0.1",
+  "description": "qiankun demo",
+  "main": "index.js",
+  "dependencies": {},
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
+  },
+  "scripts": {
+    "install": "npm-run-all --serial install:*",
+    "install:main": "cd main && npm i",
+    "install:demo01": "cd demo01 && npm i",
+    "install:demo02": "cd demo02 && npm i",
+    "start": "npm-run-all --parallel start:*",
+    "start:demo02": "cd demo02 && npm start",
+    "start:demo01": "cd demo01 && npm start",
+    "start:main": "cd main && npm start",
+    "build": "npm-run-all build:* && bash ./scripts/bundle.sh",
+    "build:demo02": "cd demo02 && npm run build",
+    "build:demo01": "cd demo01 && npm run build",
+    "build:main": "cd main && npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@fengxianqi.github.com:fengxianqi/qiankun-example.git"
+  },
+  "keywords": [
+    "qiankun",
+    "qiankun-example",
+    "demo"
+  ],
+  "author": "fengxianqi",
+  "license": "MIT"
 }
