--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "qiankun-example",
   "version": "0.0.1",
   "description": "qiankun demo",
-  "main": "index.js",
+  "homepage": "https://github.com/qiankun-demo",
   "dependencies": {},
   "devDependencies": {
     "npm-run-all": "^4.1.5"
@@ -21,16 +21,5 @@
     "build:demo01": "cd demo01 && npm run build",
     "build:main": "cd main && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@fengxianqi.github.com:fengxianqi/qiankun-example.git"
-  },
-  "keywords": [
-    "qiankun",
-    "qiankun-example",
-    "demo"
-  ],
-  "author": "fengxianqi",
-  "license": "MIT"
+  }
 }
