fix: fix build path

--- a/main/.env.production
+++ b/main/.env.production
@@ -2,7 +2,9 @@
 PORT=4000
 
 # 微项目一主机地址
-REACT_APP_MICRO_APP_FIRST=//localhost:4001/subapp/demo01/
+# REACT_APP_MICRO_APP_FIRST=//localhost:4001/subapp/demo01/
+REACT_APP_MICRO_APP_FIRST=https://resetsix.github.io/qiankun-demo/subapp/react01
 
 # 微项目二主机地址
-REACT_APP_MICRO_APP_SECOND=//localhost:4002/subapp/demo02/
+# REACT_APP_MICRO_APP_SECOND=//localhost:4002/subapp/demo02/
+REACT_APP_MICRO_APP_SECOND=https://resetsix.github.io/qiankun-demo/subapp/react02
