--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,15 @@
 {
-  "eslint.workingDirectories": ["./main", "./demo01", "./demo02"],
-  "eslint.enable": true,
-  "editor.formatOnSave": false,
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  },
-  "search.useIgnoreFiles": false,
-  "search.exclude": {
-    "**/dist": true
-  },
-  "eslint.debug": true
+    "eslint.workingDirectories": ["./main", "./demo01", "./demo02"],
+    "eslint.enable": true,
+    "editor.formatOnSave": false,
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
+    },
+    "search.useIgnoreFiles": false,
+    "search.exclude": {
+        "**/dist": true
+    },
+    // indent_size = 4
+    "editor.indentSize": 4,
+    "eslint.debug": true
 }
