--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "qiankun-example",
   "version": "0.0.1",
   "description": "qiankun demo",
-  "dependencies": {},
+  "dependencies": {
+    "@types/qs": "^6.9.11",
+    "antd": "^5.12.7",
+    "qs": "^6.11.2"
+  },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
   },
